@@ -1,1 +1,13 @@
 "# 2020-Assignment2" 
+Keith Middleton - 100744215
+Michael Magahey - 100754004
+
+a) A client connects to the server and can choose to show the shared folder, 
+upload a file to the shared folder, or download a file from the shared folder, however we didn't get it to work as intented. 
+c) To compile:
+javac --module-path C:\Dev\javafx-sdk-11.0.2\lib --add-modules javafx.controls *.java
+To run:
+In one window: java --module-path C:\Dev\javafx-sdk-11.0.2\lib --add-modules javafx.controls assignment2Server
+In another windoe: java --module-path C:\Dev\javafx-sdk-11.0.2\lib --add-modules javafx.controls assignment2
+
+!["Runnig"](C:/School/csci2020u/assignment2/attempt.png)
